--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,7 +88,7 @@
       </intent-filter>
     </activity>
 
-    <activity android:name=".ui.ImportOMPLFileActivity"
+    <activity android:name=".ui.ImportOPMLFileActivity"
       android:exported="true"
       android:excludeFromRecents="true"
       android:label="@string/import_feeds_from_opml"
