--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -309,7 +309,7 @@ jobs:
   #     run: ./deploy_playstore_fast.sh --dry-run
 
   deploy:
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/'))
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
     # See Environment settings for Deployment protection rules
     environment:
       name: play
@@ -317,8 +317,6 @@ jobs:
     concurrency:
       # This name has nothing to do with the environment name
       group: deploy-play
-      # Cancel any waiting jobs if a new one is queued (there is a wait timer configured in protection rules)
-      cancel-in-progress: ${{ !startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: [play-bundle]
@@ -348,14 +346,52 @@ jobs:
         name: bundle
         path: app/build/outputs/
 
-    - name: deploy beta
-      if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-      # do not want this to run on master commit which is also a tag
-      run: ci/run-if-not-release ./deploy_playstore_fast.sh
-
     - name: deploy production
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
       run: ./deploy_playstore_fast.sh
+
+  deploy_beta:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    # See Environment settings for Deployment protection rules
+    environment:
+      name: play-beta
+      url: https://play.google.com/console/u/0/developers/5406252659647192004/app/4975713765305405500/releases/overview
+    concurrency:
+      # This name has nothing to do with the environment name
+      group: deploy-play-beta
+      # Cancel any waiting jobs if a new one is queued (there is a wait timer configured in protection rules)
+      cancel-in-progress: true
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    needs: [play-bundle]
+    permissions:
+      contents: read
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
+          fetch-depth: 0
+          fetch-tags: true
+
+      - name: prepare for build
+        shell: bash
+        run: ./prepare_for_build.sh
+        env:
+          SERVICEACCOUNTJSON: ${{ secrets.SERVICEACCOUNTJSON }}
+          KEYSTOREPASSWORD: ${{ secrets.KEYSTOREPASSWORD }}
+          KEYSTORE: ${{ secrets.KEYSTORE }}
+          KEYPASSWORD: ${{ secrets.KEYPASSWORD }}
+          KEYALIAS: ${{ secrets.KEYALIAS }}
+
+      - name: copy bundle
+        uses: actions/download-artifact@v4
+        with:
+          name: bundle
+          path: app/build/outputs/
+
+      - name: deploy beta
+        # do not want this to run on master commit which is also a tag
+        run: ci/run-if-not-release ./deploy_playstore_fast.sh
 
   github-release:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
