--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -185,5 +185,18 @@
       android:name=".background.FeederJobService"
       android:permission="android.permission.BIND_JOB_SERVICE" />
 
+    <!-- Widget -->
+    <receiver
+      android:name=".widget.FeedWidgetReceiver"
+      android:exported="true">
+      <intent-filter>
+        <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+      </intent-filter>
+      <meta-data
+        android:name="android.appwidget.provider"
+        android:resource="@xml/feed_widget_info" />
+    </receiver>
+
+
   </application>
 </manifest>
