--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,6 +33,7 @@ testRunner = "1.6.2"
 lifecycle = "2.8.7"
 room = "2.6.1"
 openai-client = "4.0.1"
+glance = "1.1.1"
 compose = "2025.03.01"
 activityCompose = "1.10.1"
 paging = "3.3.6"
@@ -81,6 +82,9 @@ runtime = { module = "androidx.compose.runtime:runtime" }
 ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 paging-compose = { module = "androidx.paging:paging-compose", version.ref = "paging" }
+glance = { module = "androidx.glance:glance", version.ref = "glance" }
+glance-appwidget = { module = "androidx.glance:glance-appwidget", version.ref = "glance" }
+glance-material3 = { module = "androidx.glance:glance-material3", version.ref = "glance" }
 window = { module = "androidx.window:window", version.ref = "androidWindow" }
 android-material = { module = "com.google.android.material:material", version.ref = "material" }
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist" }
@@ -147,5 +151,6 @@ kotlin = ["kotlin-stdlib", "kotlin-stdlib-common", "kotlin-coroutines-core", "ko
 jvm = ["jsoup", "tagsoup", "readability4j", "retrofit", "retrofit-converter-moshi", "moshi", "moshi-kotlin", "moshi-adapters", "qrgen", "gofeed-android", "icu4j"]
 android = ["lifecycle-runtime-ktx", "lifecycle-viewmodel-ktx", "lifecycle-viewmodel-savedstate", "paging-runtime-ktx", "room-ktx", "room-paging", "core-ktx", "androidx-appcompat", "androidx-preference", "coil-gif", "coil-svg", "coil-okhttp", "kotlin-coroutines-android", "kodein-androidx", "androidx-browser", "emoji2", "emoji2-view-helper"]
 compose = ["activity-compose", "ui", "foundation", "foundation-layout", "compose-material3", "compose-material", "compose-material-icons-extended", "runtime", "ui-tooling", "navigation-compose", "paging-compose", "window", "android-material", "accompanist-permissions", "accompanist-adaptive", "compose-material3-windowsizeclass", "lifecycle-runtime-compose", "coil-compose", "lazycolumnscrollbar"]
+glance = ["glance", "glance-appwidget", "glance-material3"]
 test = ["kotlin-test-junit", "kotlin-coroutines-test", "junit", "mockk", "mockwebserver"]
 android-test = ["kotlin-test-junit", "kotlin-coroutines-test", "mockk-android", "junit", "mockwebserver", "androidx-test-core", "androidx-test-core-ktx", "androidx-test-runner", "androidx-test-junit-ktx", "room-testing", "espresso-core", "compose-ui-test-junit4"]
