--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,16 +5,17 @@ kotlin = "2.1.21"
 ksp = "2.1.21-2.0.1"
 kotlinxSerialization = "1.8.1"
 androidPlugin = "8.10.1"
-# BEGIN These should be upgraded in unison
+# BEGIN These should be upgraded in unison. See https://square.github.io/okhttp/changelogs/changelog_4x/
 okhttp = "4.12.0"
 okio = "3.6.0"
-conscrypt = "2.5.2"
+# 2.5.3 and above are 16kb aligned
+conscrypt = "2.5.3"
 # END Unison
 ktlint-gradle = "12.3.0"
 ktlint-compose = "0.4.22"
 kodein = "7.26.1"
 coroutines = "1.10.2"
-gofeed = "0.1.3"
+gofeed = "0.2.0"
 moshi = "1.15.2"
 desugar = "2.1.5"
 jsoup = "1.20.1"
