--- a/.github/workflows/health_test.yaml
+++ b/.github/workflows/health_test.yaml
@@ -11,11 +11,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Ping start
-        run: curl -X GET "https://hc-ping.com/77c53451-1da6-4101-93d9-0eb5e24cf107/start"
+      - name: Healthcheck start
+        env:
+          HC_PING_URL: ${{ secrets.HC_PING_URL }}
+        run: curl -X GET "$HC_PING_URL/start"
 
       - name: Wait for 10 seconds
         run: sleep 10
 
-      - name: Ping end
-        run: curl -X GET "https://hc-ping.com/77c53451-1da6-4101-93d9-0eb5e24cf107"
+      - name: Healthcheck end
+        env:
+          HC_PING_URL: ${{ secrets.HC_PING_URL }}
+        run: curl -X GET "$HC_PING_URL"
