--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -323,6 +323,10 @@ jobs:
     permissions:
       contents: read
     steps:
+    - name: Healthcheck start
+      env:
+        HC_PING_URL: ${{ secrets.HC_PING_URL }}
+      run: curl -X GET "$HC_PING_URL/start"
     - name: checkout
       uses: actions/checkout@v4
       with:
@@ -349,6 +353,11 @@ jobs:
     - name: deploy production
       run: ./deploy_playstore_fast.sh
 
+    - name: Healthcheck end
+      env:
+        HC_PING_URL: ${{ secrets.HC_PING_URL }}
+      run: curl -X GET "$HC_PING_URL"
+
   deploy_beta:
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     # See Environment settings for Deployment protection rules
@@ -366,6 +375,10 @@ jobs:
     permissions:
       contents: read
     steps:
+      - name: Healthcheck start
+        env:
+          HC_PING_URL: ${{ secrets.HC_PING_URL }}
+        run: ci/run-if-not-release curl -X GET "$HC_PING_URL/start"
       - name: checkout
         uses: actions/checkout@v4
         with:
@@ -392,6 +405,11 @@ jobs:
       - name: deploy beta
         # do not want this to run on master commit which is also a tag
         run: ci/run-if-not-release ./deploy_playstore_fast.sh
+
+      - name: Healthcheck end
+        env:
+          HC_PING_URL: ${{ secrets.HC_PING_URL }}
+        run: ci/run-if-not-release curl -X GET "$HC_PING_URL"
 
   github-release:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
